<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:padding="20dp"
    tools:context="app.guillen.com.myapplication.activities.RegistrarOperacion">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/TituloRegisto"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/etMonto"
        android:layout_below="@id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_monto" />
    <RadioGroup
        android:id="@+id/rgTipoOp"
        android:layout_below="@id/etMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="2">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Ingreso"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Egreso"/>
    </RadioGroup>
    <Spinner
        android:id="@+id/spTipoCu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgTipoOp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:entries="@array/tipoCuenta"/>
    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegistrar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:onClick="registrar"/>

</RelativeLayout>
